--- a/src/scrum_links.html
+++ b/src/scrum_links.html
@@ -15,15 +15,13 @@
         "name":  "Google",
         "code":  "51X8",
         "loc":   "http://www.google.de",
-        "group": "",
-        "usage": "manual"
+        "group": ""
       },
       {
         "name":  "Google 2",
         "code":  "DH1X",
         "loc":   "http://www.google.de",
-        "group": "",
-        "usage": "manual"
+        "group": ""
       }
     ]
   </script>
